--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'English drama -- 19th century'
 - !lcsh 'Comedies'
 - !lcc 'PR'
+- GITenberg
 title: 'A Rough Diamond: A Comic Drama in One Act'
 url: http://www.gutenberg.org/ebooks/46138
